[project]
name = "neurokit"
version = "0.1.0"

dependencies = [
    "uuid7~=0.1.0",
]

[project.optional-dependencies]
# Vector stores
chroma = ["chromadb>=0.4.0"]
qdrant = ["qdrant-client>=1.7.0"]

# All vector stores
vector-stores = [
    "chromadb>=0.4.0",
    "qdrant-client>=1.7.0",
    "pymongo>=4.6.0",
]

# Development
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

# All optional dependencies
all = [
    "chromadb>=0.4.0",
    "qdrant-client>=1.7.0",
]