[project]
name = "neurokit"
version = "0.1.0"

dependencies = [
    "uuid7~=0.1.0",
    "tiktoken~=0.12.0",
]

[project.optional-dependencies]
# Embedding providers
openai = ["openai>=1.0.0"]
cohere = ["cohere>=5.0.0"]
huggingface = ["sentence-transformers>=2.2.0"]

# Vector stores
chroma = ["chromadb>=0.4.0"]
qdrant = ["qdrant-client>=1.7.0"]

# All embeddings
embeddings = [
    "openai>=1.0.0",
    "cohere>=5.0.0",
    "sentence-transformers>=2.2.0",
]

# All vector stores
vector-stores = [
    "chromadb>=0.4.0",
    "qdrant-client>=1.7.0",
    "pymongo>=4.6.0",
]

# Development
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

# All optional dependencies
all = [
    "openai>=1.0.0",
    "cohere>=5.0.0",
    "sentence-transformers>=2.2.0",
    "chromadb>=0.4.0",
    "qdrant-client>=1.7.0",
]